[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/playerSprites/platformChar_idle.png" type="Texture" id=1]
[ext_resource path="res://character1.gd" type="Script" id=2]
[ext_resource path="res://assets/playerSprites/platformChar_death3.png" type="Texture" id=3]
[ext_resource path="res://assets/playerSprites/platformChar_death.png" type="Texture" id=4]
[ext_resource path="res://assets/playerSprites/platformChar_death2.png" type="Texture" id=5]
[ext_resource path="res://assets/playerSprites/platformChar_walk2.png" type="Texture" id=6]
[ext_resource path="res://assets/playerSprites/platformChar_walk1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 31 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="character1" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="deathSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )

[node name="walkSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
